tests/errors/semantics/compile_time_params_require_compile_time_args.odl
main :: () -> void {
    add :: (!a: int) -> int {
        return a;
    };

    y := 1;
    x := add(y);
    printint(x);
    println();
};
